syntax = "proto3";
package greet;

service greet {
  rpc Hello(SayHello) returns (HelloReply) {}
  rpc HelloAgain(SayHello) returns (HelloReply) {}
}

message SayHello {
  string name = 1;
}

message HelloReply {
  string message = 1;
}